@@ -17,8 +17,15 @@ public class Server
     private static int
     run(String[] args, Ice.Communicator communicator)
     {
+	//
+	// For this test, we need a dummy logger, otherwise the
+	// assertion test will print an error message.
+	//
+	communicator.setLogger(new DummyLogger());
+
         Ice.Properties properties = communicator.getProperties();
-        properties.setProperty("Ice.Warn.Dispatch", "0");
+	// We don't need to disable warnings, because we have a dummy logger.
+        //properties.setProperty("Ice.Warn.Dispatch", "0");
         properties.setProperty("TestAdapter.Endpoints", "default -p 12345 -t 10000");
         Ice.ObjectAdapter adapter = communicator.createObjectAdapter("TestAdapter");
         Ice.Object object = new ThrowerI(adapter);
