@@ -1,6 +1,9 @@
 Changes since version 1.3.0
 ---------------------------
 
+- Assertions in servant methods are now correctly caught and an error
+  message is printed using the logger.
+
 - Facets have been significantly redesigned.
 
   * Facets are no longer hierarchical. As a result, FacetPath (which
